--- a/develop/jade/object-page.pug
+++ b/develop/jade/object-page.pug
@@ -6,6 +6,7 @@ include ../blocks/**/*
 doctype html
 html(lang='ru')
     +doc-header
+        script(src='https://api-maps.yandex.ru/2.1/?apikey=99b483f6-bdce-45d5-b098-440038f8912a&lang=ru_RU')
     body
         +main-header
         .page
