--- a/develop/jade/template/footer.pug
+++ b/develop/jade/template/footer.pug
@@ -14,7 +14,7 @@ mixin doc-footer()
     script(src='libs/nouislider/wNumb.js')
     script(src='libs/micromodal.min.js')
     script(src='libs/modal-video-master/js/jquery-modal-video.min.js')
-    script(src='https://code.highcharts.com/highcharts.js')
+    script(src='libs/highcharts/highcharts.js')
     //- script(src='libs/stickyfill.min.js')
 
     //- script(src='libs/lazyload.js')
