--- a/develop/blocks/object-calc/object-calc.pug
+++ b/develop/blocks/object-calc/object-calc.pug
@@ -14,7 +14,7 @@ mixin object-calc()
                 +e.income-range
                 +e.image
                     img(src='images/redesign/object-cards/object1.jpg', alt="")
-                +e.income-data(data-min='300000' data-max='8000000' data-step='100000')
+                +e.income-data(data-min='300000' data-max='18000000' data-liberty-step='85000' data-step='100000' data-initial='2000000')
                     +e.data-row
                         +e.data-value.__income 0
                         +e.data-label Ежемесячный доход
