--- a/develop/blocks/profit-object/profit-object.pug
+++ b/develop/blocks/profit-object/profit-object.pug
@@ -16,4 +16,4 @@ mixin profit-object(id, name, rate)
                     +e.data-label Доходность
         +e.footer
             +e.name= name
-            +e.A.link(href='#') Подробнее
+            //- +e.A.link(href='#') Подробнее
