--- a/develop/blocks/project-select/project-select.pug
+++ b/develop/blocks/project-select/project-select.pug
@@ -1,10 +1,13 @@
 mixin project-select(selectType = 'block', modifier, name, options = [])
-    +b.project-select(class=modifier + ' ' + selectType)
+    +b.project-select(class=modifier + ' ' + selectType)&attributes(attributes)
         if (selectType === 'block')
             +e.LABEL.label 
                 block
-        +e.INPUT.input(type='hidden' name=name readonly='' value=options[0])
-        +e.selected !{options[0]}
+        +e.INPUT.input(type='hidden' name=name readonly='' value=(options[0].type) ? options[0].text : options[0])
+        +e.selected !{(options[0].type) ? options[0].text : options[0]}
         +e.options
             each option in options
-                +e.option !{option}
+                if (option.type)
+                    +e.option(data-type=option.type) !{option.text}
+                else
+                    +e.option !{option}
