--- a/develop/blocks/profit-calc/profit-calc.pug
+++ b/develop/blocks/profit-calc/profit-calc.pug
@@ -25,12 +25,13 @@ mixin profit-calc()
                         div Дикси
                     +e.objects-slider
                         +e.objects-slide
-                            +profit-object(1, 'ТЦ «Эко Видное»', '12.8')(data-min='200000', data-max='9000000' data-step='75000')
+                            +profit-object(1, 'ТЦ «Эко Видное»', '12.8')(data-min='200000', data-max='9000000' data-step='75000' data-liberty-step='70000' data-link='object-page1.html')
                         +e.objects-slide
-                            +profit-object(2, 'ТЦ «Город»', '10.8')(data-min='1000000', data-max='10000000' data-step='300000')
+                            +profit-object(2, 'ТЦ «Город»', '10.8')(data-min='1000000', data-max='12000000' data-step='300000' data-liberty-step='285000' data-link='object-page2.html')
                         +e.objects-slide
-                            +profit-object(1, 'Пятерочка', '13')(data-min='200000', data-max='9000000' data-step='70000')
+                            +profit-object(1, 'Пятерочка', '13')(data-min='200000', data-max='19000000' data-step='70000' data-liberty-step='67900' data-link='object-page3.html')
                         +e.objects-slide
-                            +profit-object(2, 'Перекреток', '9.2')(data-min='2000000', data-max='50000000' data-step='200000')
+                            +profit-object(2, 'Перекреток', '9.2')(data-min='2000000', data-max='50000000' data-step='200000' data-liberty-step='190000' data-link='object-page4.html')
                         +e.objects-slide
-                            +profit-object(1, 'Дикси', '8')(data-min='100000', data-max='8000000' data-step='100000')
+                            +profit-object(1, 'Дикси', '8')(data-min='100000', data-max='8000000' data-step='100000' data-liberty-step='89999' data-link='object-page5.html')
+                    +e.object-link(href='#') Подробнее
