--- a/develop/blocks/profit-object/profit-object.scss
+++ b/develop/blocks/profit-object/profit-object.scss
@@ -74,7 +74,7 @@
         height: 115px;
         display: flex;
         flex-flow: column nowrap;
-        justify-content: center;
+        justify-content: flex-start;
         align-items: flex-start;
 
         &::before {
@@ -90,40 +90,10 @@
     }
 
     &__name {
-        margin: 0 0 10px;
+        margin: 20px 0 10px;
 
         font-size: 25px;
         font-weight: 600;
-    }
-
-    &__link {
-        display: inline-block;
-        position: relative;
-
-        font-size: 25px;
-        font-weight: 500;
-        color: $theme-color;
-        text-decoration: none;
-
-        transition: opacity 300ms ease;
-
-        &::after {
-            content: '';
-            position: absolute;
-            width: 100%;
-            height: 1px;
-            left: 0;
-            bottom: -3px;
-
-            background-color: $theme-color;
-        }
-
-        &:hover,
-        &:active,
-        &:focus {
-            opacity: 0.6;
-            text-decoration: none;
-        }
     }
 }
 
