js logic updates

--- a/develop/blocks/object-calc/object-calc.pug
+++ b/develop/blocks/object-calc/object-calc.pug
@@ -22,6 +22,6 @@ mixin object-calc()
                         +e.data-value.__share 0
                         +e.data-label Приобретенных паев
                     +e.data-row
-                        +e.data-value.__rate(data-rate='12.8') 12.80%
+                        +e.data-value.__rate(data-rate='12.8' data-liberty-rate='13.8') 12.8%
                         +e.data-label Доходность
                     +e.BUTTON.button.btn(type='button') Оставить заявку
